Review Request 17333 port over changes to trunk